--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,34 @@
-body {
+html, body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+  height: 100%;
+}
+
+#root, .App {
+  height: 100%;
+}
+
+.title {
+  font-size: 20px;
+  margin: 20px;
+}
+
+.list {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  align-items: center;
+  align-content: center;
+}
+
+.memory {
+  width: 400px;
+  border: 1px solid black;
+  border-radius: 10px;
+  margin-bottom: 20px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
